# impprog

./: README.md
inlupp0/: svar.txt  task_1.txt  task_2.txt  test.c
inlupp1/: task_1.c  task_10.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
inlupp2/: ide.txt  makeExes.bat  poggers.pgm  svar.txt  task_1.c  task_10.c  task_11.c  task_12.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c  test.c  threshold.pgm
inlupp3/: CMakeLists.txt  double_stack.h  double_stack_array.c  double_stack_list.c  list.c  list.h  task_1.c  task_2.c  task_3.c  task_4.c  task_6.c
